[package]
name = "bevy_planets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast" }
